@@ -1,4 +1,4 @@
-// Copyright 2008, 2009, 2010, 2012, 2014, 2015, 2106 Global Virtual Airlines Group. All Rights Reserved.
+// Copyright 2008, 2009, 2010, 2012, 2014, 2015, 2106, 2017 Global Virtual Airlines Group. All Rights Reserved.
 package org.deltava.beans.wx;
 
 import java.time.Instant;
@@ -11,7 +11,7 @@ import org.deltava.util.cache.Cacheable;
 /**
  * A bean to store weather data for a particular location.
  * @author Luke
- * @version 7.0
+ * @version 8.1
  * @since 2.2
  */
 
@@ -37,7 +37,7 @@ public abstract class WeatherDataBean implements MarkerMapEntry, Cacheable, Comp
 	public static WeatherDataBean create(Type t) {
 		try {
 			Class<?> c = Class.forName(WeatherDataBean.class.getPackage().getName() + "." + t.toString());
-			return (WeatherDataBean) c.newInstance();
+			return (WeatherDataBean) c.getDeclaredConstructor().newInstance();
 		} catch (Exception e) {
 			return null;
 		}
